# export-labeling-automation

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts
.github/workflows/: e2e.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_rls_policies.py  0003_importer_onboarding.py  0004_warning_label_approval.py
api/: schema.json
app/: globals.css  layout.tsx  page.tsx
components/: carton-diecut-layout.tsx  handling-icons.tsx  long-side-panel.tsx  product-drawing.tsx  short-side-panel.tsx
docs/: System_Architecture_Document.md
docs/runbooks/: rb-001-getting-started.md  rb-002-deploying.md  rb-003-scaling-rule-engine.md  rb-004-cost-breaker-response.md  rb-005-artifact-reproduce-rollback.md  rb-006-db-backup-restore.md  rb-007-monitoring-setup.md
frontend/: .dockerignore  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
labelforge/: app.py  config.py
labelforge/agents/: base.py  chat.py  chat_handlers.py  checklist_extractor.py  compliance_classifier.py  composer.py  diecut_reference.py  fusion.py  intake_classifier.py  pi_parser.py  po_parser.py  product_image_processor.py  protocol_analyzer.py  registry.py  validator.py  warning_label_parser.py
labelforge/compliance/: dry_run.py  rule_engine.py
labelforge/contracts/: __init__.py  models.py
labelforge/core/: auth.py  blobstore.py  cost_breaker.py  doc_extract.py  line_drawing.py  llm.py  logging.py  metrics.py  provenance.py  rls.py  tenant.py  tracing.py  (+1 more)
ops/: alertmanager.yml
scripts/: export_openapi.py  gen_approval_pdfs.py  gen_architecture.py  gen_diecuts_v2.py  gen_solution_doc.py  generate_svgs.py  run_evals.py  seed_sagebrook.py
tests/: conftest.py
(+229 files in other folders)
